<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="@string/setting_title"
            android:textSize="20sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="@string/setting_1"
            android:textSize="20sp" />

        <Spinner
            android:id="@+id/spinner01"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:textSize="20sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="@string/setting_2"
            android:textSize="20sp" />

        <Spinner
            android:id="@+id/spinner02"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:textSize="20sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="@string/setting_3"
            android:textSize="20sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/abc_dec"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/num_dec" />

            <TextView
                android:id="@+id/abc_num"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:gravity="center"
                android:text="@string/num"
                android:textSize="20sp"
                android:typeface="sans" />

            <Button
                android:id="@+id/abc_inc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/num_inc" />
        </LinearLayout>

        <Spinner
            android:id="@+id/spinner03"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:textSize="20sp" />

        <Button
            android:id="@+id/set_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/set"
            android:textSize="20sp" />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/recycler_view"
            android:layout_width="match_parent"
            android:layout_height="121dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="91dp">

        </android.support.v7.widget.RecyclerView>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal">

        <Button
            android:id="@+id/exit_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentBottom="true"
            android:layout_weight="1"
            android:text="나가기"
            android:textSize="20sp" />
    </LinearLayout>

</RelativeLayout>